--- a/.env
+++ b/.env
@@ -1,4 +1,38 @@
 FLASK_ENV=development # 当前环境
-FLASK_DEBUG=True # 开启 debug mode
+FLASK_DEBUG=False # 开启 debug mode
 FLASK_APP=run.py # flask项目入口文件
-JWT_SECRET_KEY=b'#q)\\x00\xd6\x9f<iBQ\xd7;,\xe2E' # jwt密钥
+
+# 数据库配置
+DB_TYPE=mysql+pymysql
+DB_USERNAME=root
+DB_PASSWORD=123456
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_NAME=web-library
+
+# JWT配置
+JWT_SECRET_KEY=your-secret-key-here
+JWT_ACCESS_TOKEN_HOURS=2
+JWT_REFRESH_TOKEN_DAYS=30
+
+# 邮箱配置
+MAIL_SERVER=smtp.qq.com
+MAIL_USE_TLS=True
+MAIL_PORT=587
+MAIL_USERNAME=your-email@qq.com
+MAIL_PASSWORD=your-email-password
+MAIL_DEFAULT_SENDER=your-email@qq.com
+
+# 缓存配置
+CACHE_TYPE=redis
+CACHE_REDIS_URL=redis://localhost:6379/0
+CACHE_DEFAULT_TIMEOUT=300
+
+# 安全配置
+FLASK_ENV=development
+FLASK_DEBUG=False
+SECRET_KEY=your-app-secret-key-here
+SESSION_COOKIE_SECURE=True
+SESSION_COOKIE_HTTPONLY=True
+REMEMBER_COOKIE_SECURE=True
+REMEMBER_COOKIE_HTTPONLY=True
