--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-Migrate==3.0.1
+Flask-Mail==0.9.1
+Flask-JWT-Extended==4.2.3
+Flask-Cors==3.0.10
+Flask-Caching==2.0.2
+redis==4.5.4
+PyMySQL==1.0.2
+python-dotenv==0.19.0
+Werkzeug==2.0.1
 alembic==1.13.1
-Flask==2.3.2
-Flask_Cors==4.0.1
-Flask_JWT_Extended==4.6.0
-Flask_Mail==0.9.1
-Flask_Migrate==4.0.7
 Flask_RESTful==0.3.10
 flask_sqlalchemy==3.1.1
-redis==5.0.4
 SQLAlchemy==2.0.29
-Werkzeug==3.0.3
 DateTime~=5.5
 qrcode~=7.4.2
 pillow~=10.3.0
